--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Prologue by HTML5 UP</title>
+    <title>Lihong Zhao's Homepage</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,
       user-scalable=no">
@@ -141,6 +141,8 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
+
                   Intersect Fellowship for Computational Scientists and
                   Immunologists</a>; the American Association of
                 Immunologists (AAI)</div>
@@ -148,6 +150,8 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             <li>
               <div align="justify">2021 <a moz-do-not-send="true"
 href="https://www.maa.org/programs-and-communities/professional-development/project-next">Mathematical
+
+
 
 
 
@@ -262,6 +266,8 @@ href="https://www.maa.org/programs-and-communities/professional-development/proj
 
 
 
+
+
                     Zhao</b></u>, Katrina K. Hoyer, Suzanne S. Sindi.
                 ``ACTIVA: realistic single-cell RNA-seq generation with
                 automatic cell-type identification using introspective
@@ -283,6 +289,8 @@ href="https://www.maa.org/programs-and-communities/professional-development/proj
             <li>
               <div align="justify">Karyn L. Sutton, <u><b>Lihong Zhao</b></u>,
                 Jacoby Carter. ``The Estimation of Growth Dynamics for <i>Pomacea
+
+
 
 
 
@@ -336,6 +344,8 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
                 tract microbiome dynamics are associated with time of <i>Chlamydia</i>
                 infection''. <a moz-do-not-send="true"
                   href="https://www.biorxiv.org/content/10.1101/2022.07.18.500533v1">[Preprint]
+
+
 
 
 
