--- a/index.html
+++ b/index.html
@@ -102,28 +102,34 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             <h2>About Me</h2>
           </header>
           <h1>Education</h1>
-          <p align="left">Ph.D. in Mathematics, University of Louisiana
-            at Lafayette (UL Lafayette), 2012–2017 <br>
-            B.S. in Fundamental and Applied Mathematics, Beijing
-            University of Posts and Telecommunications (BUPT), 2007–2011<br>
-          </p>
+          <div align="left">
+            <ul>
+              <li> Ph.D. in Mathematics, University of Louisiana at
+                Lafayette (UL Lafayette), 2012–2017 </li>
+              <li> B.S. in Fundamental and Applied Mathematics, Beijing
+                University of Posts and Telecommunications (BUPT),
+                2007–2011 </li>
+            </ul>
+          </div>
           <h1>Academic Appointment</h1>
-          <p align="left">Postdoctoral Fellow, <a
-              moz-do-not-send="true"
-              href="https://appliedmath.ucmerced.edu/">Department of
-              Applied Mathematics</a>, University of California, Merced
-            (UC Merced)&nbsp; 2020–present<br>
-            &nbsp;&nbsp;&nbsp; – AAI Intersect Postdoctoral Fellow,
-            2022–present <br>
-            &nbsp;&nbsp;&nbsp; – NSF DIRAC-RTG Postdoctoral Researcher,
-            2020–2022 <br>
-            &nbsp;&nbsp;&nbsp; – Affiliate Member, Health Sciences
-            Research Institute, 2021–present <br>
-            Postdoctoral Fellow, <a moz-do-not-send="true"
-              href="https://imci.uidaho.edu/">Institute for Modeling
-              Collaboration and Innovation (IMCI)</a>, University of
-            Idaho (UI), 2018–2020<br>
-          </p>
+          <div align="left">
+            <ul>
+              <li> Postdoctoral Fellow, <a moz-do-not-send="true"
+                  href="https://appliedmath.ucmerced.edu/">Department of
+                  Applied Mathematics</a>, University of California,
+                Merced (UC Merced), 2020–present <br>
+                &nbsp;&nbsp;&nbsp; – AAI Intersect Postdoctoral Fellow,
+                2022–present <br>
+                &nbsp;&nbsp;&nbsp; – NSF DIRAC-RTG Postdoctoral
+                Researcher, 2020–2022 <br>
+                &nbsp;&nbsp;&nbsp; – Affiliate Member, Health Sciences
+                Research Institute, 2021–present </li>
+              <li>Postdoctoral Fellow, <a moz-do-not-send="true"
+                  href="https://imci.uidaho.edu/">Institute for Modeling
+                  Collaboration and Innovation (IMCI)</a>, University of
+                Idaho (UI), 2018–2020 </li>
+            </ul>
+          </div>
           <h1>Selected Awards</h1>
           <ul>
             <li>
@@ -135,6 +141,16 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             <li>
               <div align="justify"><a moz-do-not-send="true"
 href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fellowships-for-computational-scientists-and-immunologists">2022
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -158,6 +174,16 @@ href="https://www.maa.org/programs-and-communities/professional-development/proj
 
 
 
+
+
+
+
+
+
+
+
+
+
                   Association of America (MAA) Project NExT Fellowship</a><br>
               </div>
             </li>
@@ -173,9 +199,57 @@ href="https://www.maa.org/programs-and-communities/professional-development/proj
                 (CUMCM-2010)</div>
             </li>
             <li>
-              <div align="justify">National Second Prize, CUMCM-2009<br>
-              </div>
+              <div align="justify">National Second Prize, CUMCM-2009</div>
             </li>
+          </ul>
+          <h1>MOOC<br>
+          </h1>
+          <div align="left">
+            <ul>
+              <li>Introduction to Complexity, Santa Fe Institute.
+                Certificate earned on Dec 4, 2019. [<a
+                  moz-do-not-send="true"
+href="https://www.complexityexplorer.org/courses/97-introduction-to-complexity/certificates/3222470657">URL</a>]
+                <br>
+              </li>
+              <li>Introduction to Dynamical Systems and Chaos, Santa Fe
+                Institute. Certificate earned on Dec 3, 2019. [<a
+                  moz-do-not-send="true"
+href="https://www.complexityexplorer.org/courses/98-introduction-to-dynamical-systems-and-chaos/certificates/3222536193">URL</a>]</li>
+              <li>Introduction to Agent-Based Modeling, Santa Fe
+                Institute. Certificate earned on Sept 17, 2019. [<a
+                  moz-do-not-send="true"
+href="https://www.complexityexplorer.org/courses/96-introduction-to-agent-based-modeling/certificates/3048341505">URL</a>]
+                <br>
+              </li>
+              <li>R Programming, Johns Hopkins University, Coursera.
+                Certificate earned on June 21, 2019. [<a
+                  moz-do-not-send="true"
+href="https://www.coursera.org/account/accomplishments/certificate/68SZJK7V7BHK">URL</a>]</li>
+              <li>The Data Scientist’s Toolbox, Johns Hopkins
+                University, Coursera. Certificate earned on June 10,
+                2019. [<a moz-do-not-send="true"
+href="https://www.coursera.org/account/accomplishments/certificate/ZPQTD8GSH8JT">URL</a>]
+                <br>
+              </li>
+            </ul>
+            <h1 align="center">Media</h1>
+            <ul>
+              <li><a moz-do-not-send="true"
+href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-support-computation-and-immunology-cross-training"><i>''Postdoc
+                    Awarded Fellowship to Support Computation and
+                    Immunology Cross-training''</i></a><br>
+              </li>
+              <li><a moz-do-not-send="true"
+                  href="https://www.ams.org/news?news_id=6692"><i>''Early-career
+
+                    researchers gear up for virtual Mathematics Research
+                    Communities''</i></a></li>
+            </ul>
+            <ul>
+            </ul>
+          </div>
+          <ul>
           </ul>
         </div>
       </section>
@@ -268,6 +342,16 @@ href="https://www.maa.org/programs-and-communities/professional-development/proj
 
 
 
+
+
+
+
+
+
+
+
+
+
                     Zhao</b></u>, Katrina K. Hoyer, Suzanne S. Sindi.
                 ``ACTIVA: realistic single-cell RNA-seq generation with
                 automatic cell-type identification using introspective
@@ -289,6 +373,16 @@ href="https://www.maa.org/programs-and-communities/professional-development/proj
             <li>
               <div align="justify">Karyn L. Sutton, <u><b>Lihong Zhao</b></u>,
                 Jacoby Carter. ``The Estimation of Growth Dynamics for <i>Pomacea
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -364,6 +458,16 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
 
 
 
+
+
+
+
+
+
+
+
+
+
                 </a><br>
               </li>
               <li><b><u>Lihong Zhao</u></b>, Fabian Santiago, Erica M.
@@ -411,7 +515,7 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
             <ul>
               <li>
                 <div>Workshop “<a moz-do-not-send="true"
-                    href="https://dearmint.github.io/2020-02-27-uidaho/">R
+                    href="https://slihongzhao.github.io/2020-02-27-uidaho/">R
                     for Reproducible Science</a>”(BCB 503-02),
                   UI&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
                   &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Feb. 27-28, 2020</div>
