--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,
       user-scalable=no">
     <link rel="stylesheet" href="assets/css/main.css">
+    <meta name="keywords" content="lihong, zhao, lafayette, applied,
+      math, imci, merced, postdoc, mathematics, infectious, disease,
+      snail, chlamydia, aai, intersect">
   </head>
   <body class="is-preload">
     <!-- Header -->
@@ -159,6 +162,9 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
+
+
                   Intersect Fellowship for Computational Scientists and
                   Immunologists</a>; the American Association of
                 Immunologists (AAI)</div>
@@ -166,6 +172,9 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             <li>
               <div align="justify">2021 <a moz-do-not-send="true"
 href="https://www.maa.org/programs-and-communities/professional-development/project-next">Mathematical
+
+
+
 
 
 
@@ -237,11 +246,17 @@ href="https://www.coursera.org/account/accomplishments/certificate/ZPQTD8GSH8JT"
             <ul>
               <li><a moz-do-not-send="true"
 href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-support-computation-and-immunology-cross-training"><i>''Postdoc
+
+
+
                     Awarded Fellowship to Support Computation and
                     Immunology Cross-training''</i></a><br>
               </li>
               <li><a moz-do-not-send="true"
                   href="https://www.ams.org/news?news_id=6692"><i>''Early-career
+
+
+
 
                     researchers gear up for virtual Mathematics Research
                     Communities''</i></a></li>
@@ -352,6 +367,9 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
+
+
                     Zhao</b></u>, Katrina K. Hoyer, Suzanne S. Sindi.
                 ``ACTIVA: realistic single-cell RNA-seq generation with
                 automatic cell-type identification using introspective
@@ -373,6 +391,9 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
             <li>
               <div align="justify">Karyn L. Sutton, <u><b>Lihong Zhao</b></u>,
                 Jacoby Carter. ``The Estimation of Growth Dynamics for <i>Pomacea
+
+
+
 
 
 
@@ -438,6 +459,9 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
                 tract microbiome dynamics are associated with time of <i>Chlamydia</i>
                 infection''. <a moz-do-not-send="true"
                   href="https://www.biorxiv.org/content/10.1101/2022.07.18.500533v1">[Preprint]
+
+
+
 
 
 
