--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
+
                   Intersect Fellowship for Computational Scientists and
                   Immunologists</a>; the American Association of
                 Immunologists (AAI)</div>
@@ -172,6 +174,8 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             <li>
               <div align="justify">2021 <a moz-do-not-send="true"
 href="https://www.maa.org/programs-and-communities/professional-development/project-next">Mathematical
+
+
 
 
 
@@ -249,11 +253,15 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
+
                     Awarded Fellowship to Support Computation and
                     Immunology Cross-training''</i></a><br>
               </li>
               <li><a moz-do-not-send="true"
                   href="https://www.ams.org/news?news_id=6692"><i>''Early-career
+
+
 
 
 
@@ -336,7 +344,18 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
           </h1>
           <ul>
             <li>
+              <div align="left"><b><u>Lihong Zhao</u></b>, Fabian
+                Santiago, Erica M. Rutter, Shilpa Khatri, Suzanne Sindi.
+                ``Modeling and Global Sensitivity Analysis of Strategies
+                to Mitigate COVID-19 Transmission on a Structured
+                College Campus''. Bulletin of Mathematical Biology,
+                accepted for publication. <a moz-do-not-send="true"
+                  href="https://www.medrxiv.org/content/10.1101/2022.04.01.22273316v1">[Preprint]</a></div>
+            </li>
+            <li>
               <div align="justify">A. Ali Heydari, Oscar A. Davalos, <u><b>Lihong
+
+
 
 
 
@@ -391,6 +410,8 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
             <li>
               <div align="justify">Karyn L. Sutton, <u><b>Lihong Zhao</b></u>,
                 Jacoby Carter. ``The Estimation of Growth Dynamics for <i>Pomacea
+
+
 
 
 
@@ -492,14 +513,10 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
 
 
 
+
+
                 </a><br>
               </li>
-              <li><b><u>Lihong Zhao</u></b>, Fabian Santiago, Erica M.
-                Rutter, Shilpa Khatri, Suzanne Sindi. ``Modeling and
-                Global Sensitivity Analysis of Strategies to Mitigate
-                COVID-19 Transmission on a Structured College Campus''.
-                <a moz-do-not-send="true"
-                  href="https://www.medrxiv.org/content/10.1101/2022.04.01.22273316v1">[Preprint]</a></li>
               <li>Zhuolin Qu, Denis Patterson, Lauren Childs, Christina
                 Edholm, Joan Ponce, Olivia Prosper, <u><b>Lihong Zhao</b></u>.
                 ``Modeling Immunity to Malaria with an Age-Structured
