--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
           <header>
             <h2 class="alt">Welcome!&nbsp; <br>
             </h2>
-            <p align="justify">I am a postdoctoral fellow in the <a
-                moz-do-not-send="true"
+            <p align="justify">I am an NSF DIRAC-RTG postdoctoral fellow
+              in the <a moz-do-not-send="true"
                 href="https://appliedmath.ucmerced.edu/"> Department of
                 Applied Mathematics</a> at the University of California,
-              Merced and currently supported by the <a
+              Merced. In 2022 I was supported by the <a
 href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fellowships-for-computational-scientists-and-immunologists"
                 moz-do-not-send="true">American Association of
                 Immunologists (AAI) Intersect Fellowship</a>. My
@@ -92,6 +92,15 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
               analyzing mathematical models, I have also gained hands-on
               experience in experimental design through collaboration
               with biologists. <br>
+              I co-founded the <a moz-do-not-send="true"
+                href="https://www.ucmcore.org/">Math and Computer
+                Science Research Engagement (MCoRE)</a> group at UC
+              Merced in Fall 2022, a group aims to foster academic
+              engagements between UC Merced and the local community in
+              order to increase diversity and inclusion in STEM fields,
+              both in industry and academia. MCoRE is currently
+              supported by a Civic Engagement Microgrant from
+              Research!America. <br>
             </p>
           </header>
           <footer> <a href="#about" class="button scrolly">More About
@@ -122,9 +131,9 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
                   Applied Mathematics</a>, University of California,
                 Merced (UC Merced), 2020–present <br>
                 &nbsp;&nbsp;&nbsp; – AAI Intersect Postdoctoral Fellow,
-                2022–present <br>
+                2022–2023 <br>
                 &nbsp;&nbsp;&nbsp; – NSF DIRAC-RTG Postdoctoral
-                Researcher, 2020–2022 <br>
+                Researcher, 2020–2022, 2023-present <br>
                 &nbsp;&nbsp;&nbsp; – Affiliate Member, Health Sciences
                 Research Institute, 2021–present </li>
               <li>Postdoctoral Fellow, <a moz-do-not-send="true"
@@ -136,14 +145,39 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
           <h1>Selected Awards</h1>
           <ul>
             <li>
-              <div align="justify">2022 Convergence Accelerator Team
-                Award, with Childs, Edholm, Patterson, Ponce, Prosper,
-                and Qu ; the NSF-Simons Center for Multiscale Cell Fate
-                Research, University of California, Irvine (UC Irvine)</div>
+              <div align="justify"><a moz-do-not-send="true"
+                  href="https://www.researchamerica.org/civic-science/microgrants/">Civic
+
+
+
+
+                  Engagement Microgrant, Research!America</a>, 2022<br>
+              </div>
+            </li>
+            <li>
+              <div align="justify">Convergence Accelerator Team Award,
+                with Childs, Edholm, Patterson, Ponce, Prosper, and Qu ;
+                the NSF-Simons Center for Multiscale Cell Fate Research,
+                University of California, Irvine (UC Irvine), 2022</div>
             </li>
             <li>
               <div align="justify"><a moz-do-not-send="true"
 href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fellowships-for-computational-scientists-and-immunologists">2022
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -172,7 +206,7 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
                 Immunologists (AAI)</div>
             </li>
             <li>
-              <div align="justify">2021 <a moz-do-not-send="true"
+              <div align="justify"><a moz-do-not-send="true"
 href="https://www.maa.org/programs-and-communities/professional-development/project-next">Mathematical
 
 
@@ -197,13 +231,29 @@ href="https://www.maa.org/programs-and-communities/professional-development/proj
 
 
 
-                  Association of America (MAA) Project NExT Fellowship</a><br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                  Association of America (MAA) Project NExT Fellowship</a>,
+                2021<br>
               </div>
             </li>
             <li>
-              <div align="justify">2019 Career Booster Award, with
-                Omosun; Center for Complex Biological Systems (CCBS), UC
-                Irvine <br>
+              <div align="justify">Career Booster Award, with Omosun;
+                Center for Complex Biological Systems (CCBS), UC Irvine,
+                2019 <br>
               </div>
             </li>
             <li>
@@ -255,11 +305,41 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
                     Awarded Fellowship to Support Computation and
                     Immunology Cross-training''</i></a><br>
               </li>
               <li><a moz-do-not-send="true"
                   href="https://www.ams.org/news?news_id=6692"><i>''Early-career
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -344,16 +424,42 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
           </h1>
           <ul>
             <li>
+              <div align="left"><b>Zhuolin Qu, Denis Patterson, Lauren
+                  Childs, Christina Edholm, Joan Ponce, Olivia Prosper,
+                  <b><u>Lihong Zhao</u></b>. ``Modeling Immunity to
+                  Malaria with an Age-Structured PDE Framework''.
+                  Accepted for publication in SIAM Journal on Applied
+                  Mathematics. <a moz-do-not-send="true"
+                    href="https://arxiv.org/abs/2112.12721">[Preprint]</a></b></div>
+            </li>
+            <li>
               <div align="left"><b><u>Lihong Zhao</u></b>, Fabian
                 Santiago, Erica M. Rutter, Shilpa Khatri, Suzanne Sindi.
                 ``Modeling and Global Sensitivity Analysis of Strategies
                 to Mitigate COVID-19 Transmission on a Structured
-                College Campus''. Bulletin of Mathematical Biology,
-                accepted for publication. <a moz-do-not-send="true"
-                  href="https://www.medrxiv.org/content/10.1101/2022.04.01.22273316v1">[Preprint]</a></div>
+                College Campus''. Bulletin of Mathematical Biology(2023)
+                85:13. doi: <a moz-do-not-send="true"
+                  href="http://dx.doi.org/10.1007/s11538-022-01107-2">10.1007/s11538-022-01107-2</a>
+                <br>
+              </div>
             </li>
             <li>
               <div align="justify">A. Ali Heydari, Oscar A. Davalos, <u><b>Lihong
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -445,6 +551,21 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
                   maculata</i> from Hatchling to Adult''. <i>Ecosphere</i>
                 (2017) 8(7): e01840. doi: <a moz-do-not-send="true"
                   href="http://dx.doi.org/10.1002/ecs2.1840">10.1002/ecs2.1840</a></div>
@@ -460,8 +581,14 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                   href="http://dx.doi.org/10.1007/s10898-016-0489-2">10.1007/s10898-016-0489-2</a></div>
             </li>
           </ul>
-          <h1>Technical Report:</h1>
+          <h1>Other Articles:</h1>
           <ul>
+            <li>
+              <div align="justify"><u><b>Lihong Zhao</b></u>. ``The
+                Vaginal Microbiota and Its Association with Chlamydia''.
+                SIAM News, December 14, 2022. <a moz-do-not-send="true"
+href="https://sinews.siam.org/Details-Page/the-vaginal-microbiota-and-its-association-with-chlamydia">[link]</a></div>
+            </li>
             <li>
               <div align="justify">Jared T. Guilbeau, Md Istiaq Hossain,
                 Sam D. Karhbet, Ralph Baker Kearfott, Temitope S.
@@ -515,14 +642,22 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
 
 
 
-                </a><br>
-              </li>
-              <li>Zhuolin Qu, Denis Patterson, Lauren Childs, Christina
-                Edholm, Joan Ponce, Olivia Prosper, <u><b>Lihong Zhao</b></u>.
-                ``Modeling Immunity to Malaria with an Age-Structured
-                PDE Framework''. <a moz-do-not-send="true"
-                  href="https://arxiv.org/abs/2112.12721">[Preprint]</a><br>
-              </li>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                </a></li>
             </ul>
           </div>
           <ul>
@@ -539,15 +674,27 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
           <div align="justify">
             <ul>
               <li>
+                <div>Mathematical Modeling (MATH 160), UC
+                  Merced&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                  &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                  &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                  &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                  &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                  &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                  &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Spring 2023</div>
+              </li>
+              <li>
                 <div>Probability and Statistics (MATH 32), UC
                   Merced&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                  &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Fall 2020,
-                  Spring 2021, Fall 2021</div>
+                  &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; Fall
+                  2020, Spring 2021, Fall 2021</div>
               </li>
               <li>
                 <div>Elementary and Intermediate Algebra (MATH 92), UL
                   Lafayette&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                  &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Spring 2012</div>
+                  &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                  &nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;
+                  Spring 2012</div>
               </li>
             </ul>
           </div>
@@ -559,7 +706,9 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
                     href="https://slihongzhao.github.io/2020-02-27-uidaho/">R
                     for Reproducible Science</a>”(BCB 503-02),
                   UI&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                  &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Feb. 27-28, 2020</div>
+                  &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;
+                  &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                  &nbsp;&nbsp;&nbsp; &nbsp; Feb. 27-28, 2020</div>
               </li>
             </ul>
           </div>
@@ -568,12 +717,20 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
             <li>
               <div align="justify">Survey of Calculus (MATH 250), UL
                 Lafayette&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; Spring 2013</div>
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                Spring 2013</div>
             </li>
             <li>
               <div align="justify">College Algebra Fundamentals (MATH
                 100), UL Lafayette&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp; Fall 2012<br>
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                &nbsp; &nbsp; &nbsp; Fall 2012<br>
               </div>
             </li>
           </ul>
