--- a/index.html
+++ b/index.html
@@ -151,6 +151,10 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
+
+
+
                   Engagement Microgrant, Research!America</a>, 2022<br>
               </div>
             </li>
@@ -201,6 +205,10 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
+
+
+
                   Intersect Fellowship for Computational Scientists and
                   Immunologists</a>; the American Association of
                 Immunologists (AAI)</div>
@@ -208,6 +216,10 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             <li>
               <div align="justify"><a moz-do-not-send="true"
 href="https://www.maa.org/programs-and-communities/professional-development/project-next">Mathematical
+
+
+
+
 
 
 
@@ -320,11 +332,19 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
+
+
+
                     Awarded Fellowship to Support Computation and
                     Immunology Cross-training''</i></a><br>
               </li>
               <li><a moz-do-not-send="true"
                   href="https://www.ams.org/news?news_id=6692"><i>''Early-career
+
+
+
+
 
 
 
@@ -384,14 +404,18 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
               <article class="item"> <a href="#" class="image fit"><img
                     src="images/ChlamydiaDataProcessing.png" alt=""></a>
                 <header>
-                  <h3>Interplay between Genital Tract Microbiome
-                    Dynamics and Chlamydia Infection</h3>
+                  <h3><a moz-do-not-send="true"
+                      href="https://www.biorxiv.org/content/10.1101/2022.07.18.500533v1">Interplay
+                      between Genital Tract Microbiome Dynamics and
+                      Chlamydia Infection</a></h3>
                 </header>
               </article>
               <article class="item"> <a href="#" class="image fit"><img
                     src="images/COVIDFig1.png" alt=""></a>
                 <header>
-                  <h3>Modeling COVID-19 Dynamics at UC Merced</h3>
+                  <h3><a moz-do-not-send="true"
+                      href="http://dx.doi.org/10.1007/s11538-022-01107-2">Modeling
+                      COVID-19 Dynamics at UC Merced</a></h3>
                 </header>
               </article>
             </div>
@@ -399,8 +423,10 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
               <article class="item"> <a href="#" class="image fit"><img
                     src="images/MalariaDiagram.png" alt=""></a>
                 <header>
-                  <h3>Modeling Immunity to Malaria with an
-                    Age-Structured PDE Framework</h3>
+                  <h3><a moz-do-not-send="true"
+                      href="https://arxiv.org/abs/2112.12721">Modeling
+                      Immunity to Malaria with an Age-Structured PDE
+                      Framework</a></h3>
                 </header>
               </article>
               <article class="item"> <a href="#" class="image fit"><img
@@ -445,6 +471,10 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
             </li>
             <li>
               <div align="justify">A. Ali Heydari, Oscar A. Davalos, <u><b>Lihong
+
+
+
+
 
 
 
@@ -566,6 +596,10 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
+
+
+
                   maculata</i> from Hatchling to Adult''. <i>Ecosphere</i>
                 (2017) 8(7): e01840. doi: <a moz-do-not-send="true"
                   href="http://dx.doi.org/10.1002/ecs2.1840">10.1002/ecs2.1840</a></div>
@@ -602,11 +636,19 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
           <h1>Under Review:</h1>
           <div align="justify">
             <ul>
+              <li><u><b>Lihong Zhao</b></u>, Ruby Kim, Lucy S. Oremland,
+                Mukti Chowkwale, Lisette G. de Pillis, and Heather Z.
+                Brooks. ''A survey of mathematical modeling of hormonal
+                contraception and the menstrual cycle''.</li>
               <li><u><b>Lihong Zhao</b></u>, Stephanie R. Lundy, Francis
-                O. Eko, Joeseph U. Igietseme, Yusuf O.~Omosun. ``Genital
+                O. Eko, Joeseph U. Igietseme, Yusuf O. Omosun. ``Genital
                 tract microbiome dynamics are associated with time of <i>Chlamydia</i>
                 infection''. <a moz-do-not-send="true"
                   href="https://www.biorxiv.org/content/10.1101/2022.07.18.500533v1">[Preprint]
+
+
+
+
 
 
 
@@ -674,7 +716,7 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
           <div align="justify">
             <ul>
               <li>
-                <div>Mathematical Modeling (MATH 160), UC
+                <div>Mathematical Modeling (MATH 1<b>5</b>0), UC
                   Merced&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
                   &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
                   &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
