--- a/index.html
+++ b/index.html
@@ -463,7 +463,8 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                 Santiago, Erica M. Rutter, Shilpa Khatri, Suzanne Sindi.
                 ``Modeling and Global Sensitivity Analysis of Strategies
                 to Mitigate COVID-19 Transmission on a Structured
-                College Campus''. Bulletin of Mathematical Biology(2023)
+                College Campus''. <i>Bulletin of Mathematical Biology </i>(2023)
+
                 85:13. doi: <a moz-do-not-send="true"
                   href="http://dx.doi.org/10.1007/s11538-022-01107-2">10.1007/s11538-022-01107-2</a>
                 <br>
