--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
+
                   Engagement Microgrant, Research!America</a>, 2022<br>
               </div>
             </li>
@@ -209,6 +211,8 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
+
                   Intersect Fellowship for Computational Scientists and
                   Immunologists</a>; the American Association of
                 Immunologists (AAI)</div>
@@ -216,6 +220,8 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             <li>
               <div align="justify"><a moz-do-not-send="true"
 href="https://www.maa.org/programs-and-communities/professional-development/project-next">Mathematical
+
+
 
 
 
@@ -336,11 +342,15 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
+
                     Awarded Fellowship to Support Computation and
                     Immunology Cross-training''</i></a><br>
               </li>
               <li><a moz-do-not-send="true"
                   href="https://www.ams.org/news?news_id=6692"><i>''Early-career
+
+
 
 
 
@@ -406,6 +416,8 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                 <header>
                   <h3><a moz-do-not-send="true"
                       href="https://www.biorxiv.org/content/10.1101/2022.07.18.500533v1">Interplay
+
+
                       between Genital Tract Microbiome Dynamics and
                       Chlamydia Infection</a></h3>
                 </header>
@@ -415,6 +427,8 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                 <header>
                   <h3><a moz-do-not-send="true"
                       href="http://dx.doi.org/10.1007/s11538-022-01107-2">Modeling
+
+
                       COVID-19 Dynamics at UC Merced</a></h3>
                 </header>
               </article>
@@ -450,6 +464,72 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
           </h1>
           <ul>
             <li>
+              <div align="left"><u><b>Lihong Zhao</b></u>, Stephanie R.
+                Lundy, Francis O. Eko, Joeseph U. Igietseme, Yusuf O.
+                Omosun. ``Genital tract microbiome dynamics are
+                associated with time of <i>Chlamydia</i> infection''. <b>Accepted
+                  for publication in Scientific Reports. </b><a
+                  moz-do-not-send="true"
+                  href="https://www.biorxiv.org/content/10.1101/2022.07.18.500533v1">[Preprint]
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                </a></div>
+            </li>
+            <li>
               <div align="left"><b>Zhuolin Qu, Denis Patterson, Lauren
                   Childs, Christina Edholm, Joan Ponce, Olivia Prosper,
                   <b><u>Lihong Zhao</u></b>. ``Modeling Immunity to
@@ -465,6 +545,8 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                 to Mitigate COVID-19 Transmission on a Structured
                 College Campus''. <i>Bulletin of Mathematical Biology </i>(2023)
 
+
+
                 85:13. doi: <a moz-do-not-send="true"
                   href="http://dx.doi.org/10.1007/s11538-022-01107-2">10.1007/s11538-022-01107-2</a>
                 <br>
@@ -472,6 +554,8 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
             </li>
             <li>
               <div align="justify">A. Ali Heydari, Oscar A. Davalos, <u><b>Lihong
+
+
 
 
 
@@ -601,6 +685,8 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
+
                   maculata</i> from Hatchling to Adult''. <i>Ecosphere</i>
                 (2017) 8(7): e01840. doi: <a moz-do-not-send="true"
                   href="http://dx.doi.org/10.1002/ecs2.1840">10.1002/ecs2.1840</a></div>
@@ -641,66 +727,6 @@ href="http://interval.louisiana.edu/preprints/reformulations-for-rigorous.pdf">[
                 Mukti Chowkwale, Lisette G. de Pillis, and Heather Z.
                 Brooks. ''A survey of mathematical modeling of hormonal
                 contraception and the menstrual cycle''.</li>
-              <li><u><b>Lihong Zhao</b></u>, Stephanie R. Lundy, Francis
-                O. Eko, Joeseph U. Igietseme, Yusuf O. Omosun. ``Genital
-                tract microbiome dynamics are associated with time of <i>Chlamydia</i>
-                infection''. <a moz-do-not-send="true"
-                  href="https://www.biorxiv.org/content/10.1101/2022.07.18.500533v1">[Preprint]
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                </a></li>
             </ul>
           </div>
           <ul>
