--- a/index.html
+++ b/index.html
@@ -157,6 +157,8 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
+
                   Engagement Microgrant, Research!America</a>, 2022<br>
               </div>
             </li>
@@ -213,6 +215,8 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
+
                   Intersect Fellowship for Computational Scientists and
                   Immunologists</a>; the American Association of
                 Immunologists (AAI)</div>
@@ -220,6 +224,8 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             <li>
               <div align="justify"><a moz-do-not-send="true"
 href="https://www.maa.org/programs-and-communities/professional-development/project-next">Mathematical
+
+
 
 
 
@@ -344,11 +350,15 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
+
                     Awarded Fellowship to Support Computation and
                     Immunology Cross-training''</i></a><br>
               </li>
               <li><a moz-do-not-send="true"
                   href="https://www.ams.org/news?news_id=6692"><i>''Early-career
+
+
 
 
 
@@ -415,7 +425,9 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                     src="images/ChlamydiaDataProcessing.png" alt=""></a>
                 <header>
                   <h3><a moz-do-not-send="true"
-                      href="https://www.biorxiv.org/content/10.1101/2022.07.18.500533v1">Interplay
+                      href="https://www.nature.com/articles/s41598-023-36130-3">Interplay
+
+
 
 
                       between Genital Tract Microbiome Dynamics and
@@ -427,6 +439,8 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                 <header>
                   <h3><a moz-do-not-send="true"
                       href="http://dx.doi.org/10.1007/s11538-022-01107-2">Modeling
+
+
 
 
                       COVID-19 Dynamics at UC Merced</a></h3>
@@ -467,67 +481,10 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
               <div align="left"><u><b>Lihong Zhao</b></u>, Stephanie R.
                 Lundy, Francis O. Eko, Joeseph U. Igietseme, Yusuf O.
                 Omosun. ``Genital tract microbiome dynamics are
-                associated with time of <i>Chlamydia</i> infection''. <b>Accepted
-                  for publication in Scientific Reports. </b><a
-                  moz-do-not-send="true"
-                  href="https://www.biorxiv.org/content/10.1101/2022.07.18.500533v1">[Preprint]
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                </a></div>
+                associated with time of <i>Chlamydia</i> infection''. <b><i>Scientific
+                    Reports</i> (2023) 13:9006. <a
+                    moz-do-not-send="true"
+                    href="https://doi.org/10.1038/s41598-023-36130-3">10.1038/s41598-023-36130-3</a></b></div>
             </li>
             <li>
               <div align="left"><b>Zhuolin Qu, Denis Patterson, Lauren
@@ -547,6 +504,8 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
+
                 85:13. doi: <a moz-do-not-send="true"
                   href="http://dx.doi.org/10.1007/s11538-022-01107-2">10.1007/s11538-022-01107-2</a>
                 <br>
@@ -554,6 +513,8 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
             </li>
             <li>
               <div align="justify">A. Ali Heydari, Oscar A. Davalos, <u><b>Lihong
+
+
 
 
 
@@ -631,6 +592,8 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
             <li>
               <div align="justify">Karyn L. Sutton, <u><b>Lihong Zhao</b></u>,
                 Jacoby Carter. ``The Estimation of Growth Dynamics for <i>Pomacea
+
+
 
 
 
