--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
                   Engagement Microgrant, Research!America</a>, 2022<br>
               </div>
             </li>
@@ -217,6 +218,7 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
                   Intersect Fellowship for Computational Scientists and
                   Immunologists</a>; the American Association of
                 Immunologists (AAI)</div>
@@ -224,6 +226,7 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             <li>
               <div align="justify"><a moz-do-not-send="true"
 href="https://www.maa.org/programs-and-communities/professional-development/project-next">Mathematical
+
 
 
 
@@ -352,11 +355,13 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                     Awarded Fellowship to Support Computation and
                     Immunology Cross-training''</i></a><br>
               </li>
               <li><a moz-do-not-send="true"
                   href="https://www.ams.org/news?news_id=6692"><i>''Early-career
+
 
 
 
@@ -430,6 +435,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                       between Genital Tract Microbiome Dynamics and
                       Chlamydia Infection</a></h3>
                 </header>
@@ -439,6 +445,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                 <header>
                   <h3><a moz-do-not-send="true"
                       href="http://dx.doi.org/10.1007/s11538-022-01107-2">Modeling
+
 
 
 
@@ -482,7 +489,8 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                 Lundy, Francis O. Eko, Joeseph U. Igietseme, Yusuf O.
                 Omosun. ``Genital tract microbiome dynamics are
                 associated with time of <i>Chlamydia</i> infection''. <b><i>Scientific
-                    Reports</i> (2023) 13:9006. <a
+
+                    Reports</i> (2023) 13:9006. doi: <a
                     moz-do-not-send="true"
                     href="https://doi.org/10.1038/s41598-023-36130-3">10.1038/s41598-023-36130-3</a></b></div>
             </li>
@@ -506,6 +514,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                 85:13. doi: <a moz-do-not-send="true"
                   href="http://dx.doi.org/10.1007/s11538-022-01107-2">10.1007/s11538-022-01107-2</a>
                 <br>
@@ -513,6 +522,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
             </li>
             <li>
               <div align="justify">A. Ali Heydari, Oscar A. Davalos, <u><b>Lihong
+
 
 
 
@@ -592,6 +602,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
             <li>
               <div align="justify">Karyn L. Sutton, <u><b>Lihong Zhao</b></u>,
                 Jacoby Carter. ``The Estimation of Growth Dynamics for <i>Pomacea
+
 
 
 
