--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
                   Engagement Microgrant, Research!America</a>, 2022<br>
               </div>
             </li>
@@ -219,6 +220,7 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
 
 
 
+
                   Intersect Fellowship for Computational Scientists and
                   Immunologists</a>; the American Association of
                 Immunologists (AAI)</div>
@@ -226,6 +228,7 @@ href="https://mailchi.mp/aai/aai-congratulates-2022-recipients-of-intersect-fell
             <li>
               <div align="justify"><a moz-do-not-send="true"
 href="https://www.maa.org/programs-and-communities/professional-development/project-next">Mathematical
+
 
 
 
@@ -356,11 +359,13 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                     Awarded Fellowship to Support Computation and
                     Immunology Cross-training''</i></a><br>
               </li>
               <li><a moz-do-not-send="true"
                   href="https://www.ams.org/news?news_id=6692"><i>''Early-career
+
 
 
 
@@ -436,6 +441,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                       between Genital Tract Microbiome Dynamics and
                       Chlamydia Infection</a></h3>
                 </header>
@@ -445,6 +451,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
                 <header>
                   <h3><a moz-do-not-send="true"
                       href="http://dx.doi.org/10.1007/s11538-022-01107-2">Modeling
+
 
 
 
@@ -485,10 +492,11 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
           </h1>
           <ul>
             <li>
-              <div align="left"><u><b>Lihong Zhao</b></u>, Stephanie R.
+              <div align="left"><b><u>Lihong Zhao</u></b>, Stephanie R.
                 Lundy, Francis O. Eko, Joeseph U. Igietseme, Yusuf O.
                 Omosun. ``Genital tract microbiome dynamics are
                 associated with time of <i>Chlamydia</i> infection''. <b><i>Scientific
+
 
                     Reports</i> (2023) 13:9006. doi: <a
                     moz-do-not-send="true"
@@ -498,10 +506,11 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
               <div align="left"><b>Zhuolin Qu, Denis Patterson, Lauren
                   Childs, Christina Edholm, Joan Ponce, Olivia Prosper,
                   <b><u>Lihong Zhao</u></b>. ``Modeling Immunity to
-                  Malaria with an Age-Structured PDE Framework''.
-                  Accepted for publication in SIAM Journal on Applied
-                  Mathematics. <a moz-do-not-send="true"
-                    href="https://arxiv.org/abs/2112.12721">[Preprint]</a></b></div>
+                  Malaria with an Age-Structured PDE Framework''. <i>SIAM
+                    Journal on Applied Mathematics</i> (2023)
+                  83(3):1098-1125. doi: </b><a
+                  href="https://doi.org/10.1137/21M1464427"
+                  property="sameAs" moz-do-not-send="true">10.1137/21M1464427</a></div>
             </li>
             <li>
               <div align="left"><b><u>Lihong Zhao</u></b>, Fabian
@@ -515,6 +524,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
 
 
 
+
                 85:13. doi: <a moz-do-not-send="true"
                   href="http://dx.doi.org/10.1007/s11538-022-01107-2">10.1007/s11538-022-01107-2</a>
                 <br>
@@ -522,6 +532,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
             </li>
             <li>
               <div align="justify">A. Ali Heydari, Oscar A. Davalos, <u><b>Lihong
+
 
 
 
@@ -602,6 +613,7 @@ href="https://appliedmath.ucmerced.edu/news/2022/postdoc-awarded-fellowship-supp
             <li>
               <div align="justify">Karyn L. Sutton, <u><b>Lihong Zhao</b></u>,
                 Jacoby Carter. ``The Estimation of Growth Dynamics for <i>Pomacea
+
 
 
 
